--- a/Jenkins_Jobs/jobs/Datahunter_Result/builds/21/htmlreports/CPU_Utilizations_Report/htmlpublisher-wrapper.html
+++ b/Jenkins_Jobs/jobs/Datahunter_Result/builds/21/htmlreports/CPU_Utilizations_Report/htmlpublisher-wrapper.html
@@ -129,8 +129,8 @@ var selectedTab = "tab1"
 
 <ul id="tabnav">
 <li id="tab1" class="unselected" onclick="updateBody('tab1');" value="index.html">index</li>
-<script type="text/javascript">document.getElementById("hudson_link").innerHTML="Back to Datahunter_Result";</script>
-<script type="text/javascript">document.getElementById("hudson_link").href="http://localhost:8082/job/Datahunter_Result/";</script>
+<script type="text/javascript">document.getElementById("hudson_link").innerHTML="Back to DataHunter_Result";</script>
+<script type="text/javascript">document.getElementById("hudson_link").href="http://localhost:8082/job/DataHunter_Result/";</script>
 <script type="text/javascript">document.getElementById("zip_link").href="*zip*/CPU_Utilizations_Report.zip";</script>
 </ul>
 <div>
