--- a/Jenkins_Jobs/jobs/Datahunter_Result/builds/21/log_content.html
+++ b/Jenkins_Jobs/jobs/Datahunter_Result/builds/21/log_content.html
@@ -13,33 +13,33 @@
 </style>
 <pre>Started by user admin
 Running as SYSTEM
-Building in workspace C:\_Jenkins\JENKINS_HOME\workspace\Datahunter_Result
-[Datahunter_Result] $ cmd /c call C:\Users\SUSER1\AppData\Local\Temp\jenkins7277686145648502241.bat
+Building in workspace C:\_Jenkins\JENKINS_HOME\workspace\DataHunter_Result
+[DataHunter_Result] $ cmd /c call C:\Users\SUSER1\AppData\Local\Temp\jenkins7277686145648502241.bat
 
-C:\_Jenkins\JENKINS_HOME\workspace\Datahunter_Result&gt;CALL C:\gitrepo\mark-5-9\mark59-xtras\Jenkins_JobsConfig\jmeterApplicationResult.bat 
+C:\_Jenkins\JENKINS_HOME\workspace\DataHunter_Result&gt;CALL C:\gitrepo\mark-5-9\mark59-xtras\Jenkins_JobsConfig\jmeterApplicationResult.bat 
 
-C:\_Jenkins\JENKINS_HOME\workspace\Datahunter_Result&gt;C:
+C:\_Jenkins\JENKINS_HOME\workspace\DataHunter_Result&gt;C:
 
-C:\_Jenkins\JENKINS_HOME\workspace\Datahunter_Result&gt;echo parmExecuteScriptVerificationPassed=true 
+C:\_Jenkins\JENKINS_HOME\workspace\DataHunter_Result&gt;echo parmExecuteScriptVerificationPassed=true 
 parmExecuteScriptVerificationPassed=true
 
-C:\_Jenkins\JENKINS_HOME\workspace\Datahunter_Result&gt;echo parmExecuteResult=Execution_OK 
+C:\_Jenkins\JENKINS_HOME\workspace\DataHunter_Result&gt;echo parmExecuteResult=Execution_OK 
 parmExecuteResult=Execution_OK
 
-C:\_Jenkins\JENKINS_HOME\workspace\Datahunter_Result&gt;set PATH=C:\Program Files\Java\jdk-11\bin;C:\Windows\System32;C:\windows\system32\wbem 
+C:\_Jenkins\JENKINS_HOME\workspace\DataHunter_Result&gt;set PATH=C:\Program Files\Java\jdk-11\bin;C:\Windows\System32;C:\windows\system32\wbem 
 
-C:\_Jenkins\JENKINS_HOME\workspace\Datahunter_Result&gt;echo PATH       is C:\Program Files\Java\jdk-11\bin;C:\Windows\System32;C:\windows\system32\wbem 
+C:\_Jenkins\JENKINS_HOME\workspace\DataHunter_Result&gt;echo PATH       is C:\Program Files\Java\jdk-11\bin;C:\Windows\System32;C:\windows\system32\wbem 
 PATH       is C:\Program Files\Java\jdk-11\bin;C:\Windows\System32;C:\windows\system32\wbem
 
-C:\_Jenkins\JENKINS_HOME\workspace\Datahunter_Result&gt;java -version 
+C:\_Jenkins\JENKINS_HOME\workspace\DataHunter_Result&gt;java -version 
 openjdk version "11" 2018-09-25
 OpenJDK Runtime Environment 18.9 (build 11+28)
 OpenJDK 64-Bit Server VM 18.9 (build 11+28, mixed mode)
 
-C:\_Jenkins\JENKINS_HOME\workspace\Datahunter_Result&gt;if "Execution_OK" EQU "Execution_OK" (
+C:\_Jenkins\JENKINS_HOME\workspace\DataHunter_Result&gt;if "Execution_OK" EQU "Execution_OK" (
 echo "load results into graphical comparative analysis tooling"   
  cd C:\gitrepo\mark-5-9\mark59-wip\metricsRuncheck\target  
- java -jar metricsRuncheck.jar -a DataHunter -i C:\Jmeter_Results\DataHunter -h localhost  -p 3306 -t JMETER   -r "&lt;a href='http://localhost:8082/job/Datahunter_Result/21/HTML_Report'&gt;run 21&lt;/a&gt;"  
+ java -jar metricsRuncheck.jar -a DataHunter -i C:\Jmeter_Results\DataHunter -h localhost  -p 3306 -t JMETER   -r "&lt;a href='http://localhost:8082/job/DataHunter_Result/21/HTML_Report'&gt;run 21&lt;/a&gt;"  
  echo "convert xml file to csv"   
  if exist C:\Jmeter_Results\DataHunter\MERGED\ RD /S /Q C:\Jmeter_Results\DataHunter\MERGED	  
  mkdir C:\Jmeter_Results\DataHunter\MERGED\   
@@ -71,7 +71,7 @@ Runcheck executing using the following arguments
 ------------------------------------------------ 
  application    : DataHunter
  input          : C:\Jmeter_Results\DataHunter
- reference      : &lt;a href='http://localhost:8082/job/Datahunter_Result/21/HTML_Report'&gt;run 21&lt;/a&gt;
+ reference      : &lt;a href='http://localhost:8082/job/DataHunter_Result/21/HTML_Report'&gt;run 21&lt;/a&gt;
  tool           : JMETER
  mysqlserver    : localhost
  mysqlPort      : 3306
