remove WIP refers in Jenkins Config

--- a/Jenkins_Jobs/jobs/DataHunterDistributed_Check/builds/2/log_content.html
+++ b/Jenkins_Jobs/jobs/DataHunterDistributed_Check/builds/2/log_content.html
@@ -28,9 +28,9 @@ C:\_Jenkins\JENKINS_HOME\workspace\DataHunterDistributed_Check&gt;C:
 
 C:\_Jenkins\JENKINS_HOME\workspace\DataHunterDistributed_Check&gt;cd C:\apache-jmeter\bin 
 
-C:\apache-jmeter\bin&gt;jmeter -n -f -t C:\gitrepo\mark-5-9\mark59-wip\dataHunterPVTest\test-plans\DataHunterSeleniumTestPlan.jmx -l C:\temp\DataHunterResults.xml -JDuration=20 -JUsers=1    -JForceTxnFailPercent=0 -JDataHunterUrlHostPort=http://MASTERPC:8081     
+C:\apache-jmeter\bin&gt;jmeter -n -f -t C:\gitrepo\mark-5-9\mark59\dataHunterPVTest\test-plans\DataHunterSeleniumTestPlan.jmx -l C:\temp\DataHunterResults.xml -JDuration=20 -JUsers=1    -JForceTxnFailPercent=0 -JDataHunterUrlHostPort=http://MASTERPC:8081     
 Creating summariser &lt;summary&gt;
-Created the tree successfully using C:\gitrepo\mark-5-9\mark59-wip\dataHunterPVTest\test-plans\DataHunterSeleniumTestPlan.jmx
+Created the tree successfully using C:\gitrepo\mark-5-9\mark59\dataHunterPVTest\test-plans\DataHunterSeleniumTestPlan.jmx
 Starting the test @ Wed Dec 18 13:25:56 AEDT 2019 (1576635956738)
 Waiting for possible Shutdown/StopTestNow/HeapDump/ThreadDump message on port 4445
 Warning: Nashorn engine is planned to be removed from a future JDK release
